--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,22 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://artifacts.alfresco.com/nexus/content/repositories/public/'
+    }
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
 }
 
 dependencies {
+    compile group: 'org.springframework', name: 'spring-core', version: '5.0.0.M5'
+    compile group: 'org.springframework', name: 'spring-context', version: '5.0.0.M5'
+    compile group: 'org.springframework', name: 'spring-aop', version: '5.0.0.M5'
+    compile 'com.jfoenix:jfoenix:1.9.0'
+    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-5'
+
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
