--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,27 @@ version '1.0'
 
 apply plugin: 'java'
 
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "gradle.plugin.edu.sc.seis:macAppBundle:2.2.1"
+    }
+}
+
+apply plugin: "edu.sc.seis.macAppBundle"
+
+macAppBundle {
+    mainClassName = "com.butilov.mathmodel.FXApplication"
+//    icon = "myIcon.icns"
+    bundleJRE = true
+//    javaProperties.put("apple.laf.useScreenMenuBar", "true")
+//    backgroundImage = "doc/macbackground.png"
+}
+
 sourceCompatibility = 1.8
 
 repositories {
